Retrofits elements/custom-element-boilerplate into cesium-ifc-viewer

--- a/cesium-ifc-viewer/index.html
+++ b/cesium-ifc-viewer/index.html
@@ -3,9 +3,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>‹cesium-ifc-viewer› Web Component · Uzufly/Exploratory</title>
+    <link rel="stylesheet" href="examples/styles.css">
   </head>
   <body>
-    <a href="/dev/index.html"><code>‹cesium-ifc-viewer›</code> demo</a>
+    <a href="examples/index.html"><code>‹cesium-ifc-viewer›</code> demo</a>
   </body>
 </html>
