Initializes the Cesium Viewer

--- a/cesium-viewer/index.html
+++ b/cesium-viewer/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>‹custom-element› Web Component · Uzufly</title>
+    <title>‹cesium-viewer› Web Component · Uzufly</title>
     <link rel="stylesheet" href="examples/styles.css">
   </head>
   <body>
-    <a href="examples/index.html"><code>‹custom-element›</code> demo</a>
+    <a href="examples/index.html"><code>‹cesium-viewer›</code> demo</a>
   </body>
 </html>
