--- a/cesium-viewer/examples/index.html
+++ b/cesium-viewer/examples/index.html
@@ -4,13 +4,17 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>‹custom-element› Web Component · Uzufly</title>
+    <title>Cesium Viewer · Uzufly</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <custom-element>
-      <p>Here's some slotted content.</p>
-    </custom-element>
-    <script type="module" src="../src/custom-element.js"></script>
+    <cesium-viewer
+      ion-access-token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI5ZGJmOTA1NS0wOGE4LTQ4NjYtYmJmZC1iMTE1NzRjZjIxNTUiLCJpZCI6MzIzMDIsImlhdCI6MTY3ODIwNjY0OX0.b5BZMKngT-7-Tw9hbg_6kfqMG7n9_f7dgMNq_5uEZbY"
+      
+      cesium-base-url="/static/"
+    >
+      <h1>Cesium Layer Picker</h1>
+    </cesium-viewer>
+    <script type="module" src="../src/cesium-viewer.js"></script>
   </body>
 </html>
