Adds a top bar and some CSS

--- a/cesium-viewer/examples/index.html
+++ b/cesium-viewer/examples/index.html
@@ -12,11 +12,13 @@
       ion-access-token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI5ZGJmOTA1NS0wOGE4LTQ4NjYtYmJmZC1iMTE1NzRjZjIxNTUiLCJpZCI6MzIzMDIsImlhdCI6MTY3ODIwNjY0OX0.b5BZMKngT-7-Tw9hbg_6kfqMG7n9_f7dgMNq_5uEZbY"
       imagery-provider="https://wmts20.geo.admin.ch/1.0.0/ch.swisstopo.pixelkarte-farbe/default/current/3857/{z}/{x}/{y}.jpeg"
       terrain-provider="https://3d.geo.admin.ch/1.0.0/ch.swisstopo.terrain.3d/default/20160115/4326/"
-      camera-position="[6.137499506, 46.192506022, 425.999]"
-      camera-angle="[10, 35, 0]"
+      camera-position="[6.137499506, 46.192506022, 800]"
+      camera-angle="[10, -35, 0]"
       cesium-base-url="/static/"
     >
-      <h1>Cesium Layer Picker</h1>
+    <header class="cesium-viewer-top-bar">
+      <p>Cesium Layer Picker</p>
+    </header>
     </cesium-viewer>
     <script type="module" src="../src/cesium-viewer.js"></script>
   </body>
