Changes the type for the layers

--- a/cesium-viewer/examples/index.html
+++ b/cesium-viewer/examples/index.html
@@ -14,6 +14,7 @@
       swiss-terrain
       swiss-buildings
       swiss-trees
+      feature-layers='["first", "second"]'
       camera-position="[6.137499506, 46.192506022, 800]"
       camera-angle="[10, -35, 0]"
       cesium-base-url="/static/"
