Sets condition for layer format and timestamp

--- a/cesium-viewer/examples/index.html
+++ b/cesium-viewer/examples/index.html
@@ -15,8 +15,8 @@
       swiss-buildings
       swiss-trees
       feature-layers='[
-        {"src": "ch.astra.mountainbikeland","format": "WMS"},
-        {"src": "ch.swisstopo.swisstlm3d-wald", "format": "WMTS"}
+        {"src": "ch.astra.mountainbikeland","type": "WMS"},
+        {"src": "ch.swisstopo.swisstlm3d-wald", "type": "WMTS"}
         ]'
       camera-position="[6.137499506, 46.192506022, 800]"
       camera-angle="[10, -35, 0]"
