Adds a layer picker with radio boxes for switching base layers

--- a/cesium-viewer/examples/index.html
+++ b/cesium-viewer/examples/index.html
@@ -22,9 +22,11 @@
       camera-angle="[10, -35, 0]"
       cesium-base-url="/static/"
     >
-    <header class="cesium-viewer-top-bar">
-      <p>Cesium Layer Picker</p>
-    </header>
+    
+      <header class="cesium-viewer-top-bar">
+        <p>Cesium Layer Picker</p>
+      </header>
+      <layer-picker></layer-picker>
     </cesium-viewer>
     <script type="module" src="../src/cesium-viewer.js"></script>
   </body>
