Corrects the way you import a feature layer with an attribute

--- a/cesium-viewer/examples/index.html
+++ b/cesium-viewer/examples/index.html
@@ -14,6 +14,7 @@
       swiss-terrain
       swiss-buildings
       swiss-trees
+      feature-layers='[{"src": "ch.are.bauzonen","type": "WMS"},{"src": "ch.swisstopo.digitales-hoehenmodell_25_reliefschattierung","type": "WMTS"}]'
       camera-position="[6.137499506, 46.192506022, 800]"
       camera-angle="[10, -35, 0]"
       cesium-base-url="/static/"
