Changes import of feature layers on scene instead of viewer

--- a/cesium-viewer/examples/index.html
+++ b/cesium-viewer/examples/index.html
@@ -10,11 +10,11 @@
   <body>
     <cesium-viewer
       ion-access-token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI5ZGJmOTA1NS0wOGE4LTQ4NjYtYmJmZC1iMTE1NzRjZjIxNTUiLCJpZCI6MzIzMDIsImlhdCI6MTY3ODIwNjY0OX0.b5BZMKngT-7-Tw9hbg_6kfqMG7n9_f7dgMNq_5uEZbY"
-      imagery-provider="https://wmts100.geo.admin.ch/1.0.0/ch.swisstopo.swissalti3d-reliefschattierung/default/current/3857/{z}/{x}/{y}.png"
+      imagery-provider="https://wmts100.geo.admin.ch/1.0.0/ch.swisstopo.swissalti3d-reliefschattierung/default/current/4326/{z}/{x}/{y}.png"
       swiss-terrain
       swiss-buildings
       swiss-trees
-      feature-layers='[{"src": "ch.are.bauzonen","type": "WMS"},{"src": "ch.swisstopo.digitales-hoehenmodell_25_reliefschattierung","type": "WMTS"}]'
+      feature-layers=''
       camera-position="[6.137499506, 46.192506022, 800]"
       camera-angle="[10, -35, 0]"
       cesium-base-url="/static/"
