--- a/cesium-viewer/examples/index.html
+++ b/cesium-viewer/examples/index.html
@@ -23,6 +23,7 @@
       <header class="cesium-viewer-top-bar">
         <p>Cesium Layer Picker</p>
       </header>
+      <div id="popup" class="popup"></div>
       <layer-picker></layer-picker>
     </cesium-viewer>
     <script type="module" src="../src/cesium-viewer.js" ></script>
