Adds layer picker element to example html

--- a/cesium-viewer/examples/index.html
+++ b/cesium-viewer/examples/index.html
@@ -24,7 +24,7 @@
         <p>Cesium Layer Picker</p>
       </header>
       <div id="popup" class="popup"></div>
-      
+      <layer-picker></layer-picker>
     </cesium-viewer>
     <script type="module" src="../src/cesium-viewer.js" ></script>
   </body>
