--- a/cesium-ifc-viewer/examples/index.html
+++ b/cesium-ifc-viewer/examples/index.html
@@ -11,7 +11,7 @@
     <cesium-ifc-viewer
       id="mainViewer"
       cesium-base-url="/static/"
-      ifc-base-url="../../static/"
+      ifc-base-url="../../../static/"
       ion-access-token="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI5ZGJmOTA1NS0wOGE4LTQ4NjYtYmJmZC1iMTE1NzRjZjIxNTUiLCJpZCI6MzIzMDIsImlhdCI6MTY3ODIwNjY0OX0.b5BZMKngT-7-Tw9hbg_6kfqMG7n9_f7dgMNq_5uEZbY"
       model-origin="[ 6.137499506, 46.192506022, 425.999 ]"
       model-orientation="[ 90, 0, 0 ]"
