Add serverUrl, streamId, objectId, and token to model attributes

--- a/cesium-ifc-viewer/examples/index.html
+++ b/cesium-ifc-viewer/examples/index.html
@@ -16,6 +16,10 @@
       model-origin="[ 6.137499506, 46.192506022, 425.999 ]"
       model-orientation="[ 90, 0, 0 ]"
       clamp-to-ground
+      serverUrl='https://speckle.xyz'
+      streamId= '8917fd99d7'
+      objectId= 'f84e16eb43cee72b7116a8aa588398fe'
+      token='0fc25c4f54334175f51e3cd69007e36db05e3cf348'
     >
       <h1>Cesium IFC viewer</h1>
       <p>
