Add graphql dependency and fix linting issues

--- a/cesium-ifc-viewer/examples/index.html
+++ b/cesium-ifc-viewer/examples/index.html
@@ -16,10 +16,10 @@
       model-origin="[ 6.137499506, 46.192506022, 425.999 ]"
       model-orientation="[ 90, 0, 0 ]"
       clamp-to-ground
-      serverUrl='https://speckle.xyz'
-      streamId= '8917fd99d7'
-      objectId= 'cde8cbc4baae88b933f7217375a0d1a3'
-      token='0fc25c4f54334175f51e3cd69007e36db05e3cf348'
+      serverUrl="https://speckle.xyz"
+      streamId="8917fd99d7"
+      objectId="cde8cbc4baae88b933f7217375a0d1a3"
+      token="0fc25c4f54334175f51e3cd69007e36db05e3cf348"
     >
       <h1>Cesium IFC viewer</h1>
       <p>
@@ -27,10 +27,12 @@
         canvas.
       </p>
     </cesium-ifc-viewer>
-    <cesium-ifc-viewer-data-attribution for="mainViewer"></cesium-ifc-viewer-data-attribution>
+    <cesium-ifc-viewer-data-attribution
+      for="mainViewer"
+    ></cesium-ifc-viewer-data-attribution>
     <script type="module">
-      import '../src/cesium-ifc-viewer.js';
-      import '../src/cesium-ifc-viewer-data-attribution.js';
+      import "../src/cesium-ifc-viewer.js";
+      import "../src/cesium-ifc-viewer-data-attribution.js";
     </script>
   </body>
 </html>
